--- a/arch/arm/boot/dts/am33xx.dtsi
+++ b/arch/arm/boot/dts/am33xx.dtsi
@@ -380,5 +380,65 @@
 			};
 
 		};
+
+		ehrpwm0: ehrpwm@48300200 {
+			compatible	= "ti,omap2-ehrpwm";
+			reg = <0x48300200 0x100 0x48300000 0x10>;
+			interrupt-parent = <&intc>;
+			interrupt = <86 58>;
+			ti,hwmods = "ehrpwm0";
+			#pwm-cells = <3>;
+			status = "disabled";
+		};
+
+		ehrpwm1: ehrpwm@48302200 {
+			compatible	= "ti,omap2-ehrpwm";
+			reg = <0x48302200 0x100 0x48302000 0x10>;
+			interrupt-parent = <&intc>;
+			interrupt = <87 59>;
+			ti,hwmods = "ehrpwm1";
+			#pwm-cells = <3>;
+			status = "disabled";
+		};
+
+		ehrpwm2: ehrpwm@48304200 {
+			compatible	= "ti,omap2-ehrpwm";
+			reg = <0x48304200 0x100 0x48304000 0x10>;
+			interrupt-parent = <&intc>;
+			interrupt = <39 60>;
+			ti,hwmods = "ehrpwm2";
+			#pwm-cells = <3>;
+			status = "disabled";
+		};
+
+		ecap0: ecap@48300100 {
+			compatible	= "ti,omap2-ecap";
+			reg = <0x48300100 0x80 0x48300000 0x10>;
+			interrupt-parent = <&intc>;
+			interrupt = <31>;
+			ti,hwmods = "ecap0";
+			#pwm-cells = <3>;
+			status = "disabled";
+		};
+
+		ecap1: ecap@48302100 {
+			compatible	= "ti,omap2-ecap";
+			reg = <0x48302100 0x80 0x48302000 0x10>;
+			interrupt-parent = <&intc>;
+			interrupt = <47>;
+			ti,hwmods = "ecap1";
+			#pwm-cells = <3>;
+			status = "disabled";
+		};
+
+		ecap2: ecap@48304100 {
+			compatible	= "ti,omap2-ecap";
+			reg = <0x48304100 0x80 0x48304000 0x10>;
+			interrupt-parent = <&intc>;
+			interrupt = <61>;
+			ti,hwmods = "ecap2";
+			#pwm-cells = <3>;
+			status = "disabled";
+		};
 	};
 };
