am33xx.dtsi: enable MMC HSPE bit for all 3 controllers
Signed-off-by: Koen Kooi <koen@dominion.thruhere.net>

--- a/arch/arm/boot/dts/am33xx.dtsi
+++ b/arch/arm/boot/dts/am33xx.dtsi
@@ -267,6 +267,7 @@
 			ti,hwmods = "mmc1";
 			ti,dual-volt;
 			ti,needs-special-reset;
+			ti,needs-special-hs-handling;
 			dmas = <&edma 24
 				&edma 25>;
 			dma-names = "tx", "rx";
@@ -276,6 +277,7 @@
 			compatible = "ti,omap3-hsmmc";
 			ti,hwmods = "mmc2";
 			ti,needs-special-reset;
+			ti,needs-special-hs-handling;
 			dmas = <&edma 2
 				&edma 3>;
 			dma-names = "tx", "rx";
@@ -286,6 +288,7 @@
 			compatible = "ti,omap3-hsmmc";
 			ti,hwmods = "mmc3";
 			ti,needs-special-reset;
+			ti,needs-special-hs-handling;
 			status = "disabled";
 		};
 
