--- a/arch/arm/boot/dts/am335x-bonelt.dts
+++ b/arch/arm/boot/dts/am335x-bonelt.dts
@@ -7,5 +7,11 @@
  */
 /dts-v1/;
 
-/include/ "am33xx.dtsi"
 /include/ "am335x-bone-common.dtsi"
+
+&mmc2 {
+	vmmc-supply = <&ldo3_reg>;
+	bus-width = <4>;
+	ti,non-removable;
+	status = "okay";
+};
