video/Kconfig+Makefile: Add new Kconfig for old driver
Signed-off-by: Joel A Fernandes <joelagnel@ti.com>

--- a/drivers/video/Makefile
+++ b/drivers/video/Makefile
@@ -168,3 +168,5 @@ obj-$(CONFIG_FB_VIRTUAL)          += vfb.o
 
 #video output switch sysfs driver
 obj-$(CONFIG_VIDEO_OUTPUT_CONTROL) += output.o
+
+obj-$(CONFIG_NXP_TDA998X_OLD) 	  += nxp/
