--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -2433,6 +2433,8 @@ source "drivers/video/omap2/Kconfig"
 source "drivers/video/exynos/Kconfig"
 source "drivers/video/backlight/Kconfig"
 
+source "drivers/video/nxp/Kconfig"
+
 if VT
 	source "drivers/video/console/Kconfig"
 endif
