am335x-bonelt/dts: Add DT node to probe NXP driver
Signed-off-by: Joel A Fernandes <joelagnel@ti.com>

--- a/arch/arm/boot/dts/am335x-bonelt.dts
+++ b/arch/arm/boot/dts/am335x-bonelt.dts
@@ -30,3 +30,20 @@
 	ti,non-removable;
 	status = "okay";
 };
+
+&i2c0 {
+	tda998X@34 {
+ 		compatible = "nxp,tda988x";
+	 	reg = <0x34>;
+	};
+};
+
+&capebus {
+	override@0 {
+		board-name = "NXP HDMI on CapeBus";
+		compatible = "bone-capebus-slot-override";
+		slot = <1>;
+		version = "00A1";
+		manufacturer = "Beagleboardtoys";
+	};
+};
